# kerbitat

./: MANIFEST.in  README.md  pyproject.toml
example/: cnn-resnet18-mnist.ipynb
src/kerbitat/: __init__.py  kerbitat.py
src/kerbitat/data/: kernel_to_id.pkl  predictor.pt
