
[build-system]
requires = ["setuptools>=61.0", "deepview-profile>=0.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kerbitat"
version = "0.0.2"
authors = [
  { name="Siyuan Zhang", email="zhangsy3@shanghaitech.edu.cn" },
]
description = "A small tool to pridict running time of a DNN model on NVIDIA GPUs."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    # "License :: OSI Approved :: Apache Software License v2.0",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/murez/kerbitat"
"Bug Tracker" = "https://github.com/murez/kerbitat/issues"